--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         >
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAN2kXG8EU2RUmltwzOhHzGaqKjxbfJ3Lc" />
+            android:value="API_KEY" />
         <activity
             android:name=".MainActivity"
             android:exported="true" >
